--- a/PassionUpdater/res/values/strings.xml
+++ b/PassionUpdater/res/values/strings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Shuvit ROM Update Checker</string>
-    <string name="app_name">ShuvitUpdater</string>
+    <string name="hello">Passion ROM Update Checker</string>
+    <string name="app_name">PassionUpdater</string>
     <string name="update_button_text">Checking Now</string>
-    <string name="msg_board_default_text">Shuvit Updater</string>
+    <string name="msg_board_default_text">Passion Updater</string>
     
 </resources>
